# dkms-bindings

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  test.js
bindings/dart/: .packages  .pubignore  CHANGELOG.md  Cargo.toml  README.md  logs.txt  pubspec.yaml
bindings/dart/.dart_tool/: package_config.json  package_config_subset
bindings/dart/example/android/app/: build.gradle
bindings/dart/example/ios/Runner/: Info.plist
bindings/dart/example/ios/Runner.xcodeproj/: project.pbxproj
bindings/dart/example/lib/: mainios.dart
bindings/dart/example/macos/Flutter/: GeneratedPluginRegistrant.swift
bindings/dart/example/macos/Runner.xcodeproj/: project.pbxproj
bindings/dart/example/macos/Runner/Configs/: AppInfo.xcconfig
bindings/dart/ffi/: .gitignore  Cargo.toml
bindings/dart/ffi/keri-dart.xcodeproj/: project.pbxproj
bindings/dart/ffi/src/: bridge_generated.rs  test.rs
bindings/dart/ios/: bridge_generated.h  keri.podspec
bindings/dart/ios/Classes/: DartPlugin.h  DartPlugin.m  SwiftDartPlugin.swift
bindings/dart/keri/: .pubignore  CHANGELOG.md  README.md  pubspec.yaml
bindings/dart/keri-dart.xcodeproj/: project.pbxproj
bindings/dart/keri/android/: build.gradle  settings.gradle
bindings/dart/keri/example/: README.md  pubspec.yaml
bindings/dart/keri/example/lib/: main.dart  mainios.dart
bindings/dart/keri/example/test/: widget_test.dart
bindings/dart/keri/example/windows/: CMakeLists.txt
bindings/dart/keri/integration_test/: functions_test.dart
bindings/dart/keri/ios/: bridge_generated.h  keri.podspec
bindings/dart/keri/ios/Classes/: KeriPlugin.h
bindings/dart/keri/keri/: CHANGELOG.md  README.md  pubspec.yaml
bindings/dart/keri/keri/cmake/: dartkeriox.cmake  main.cmake
bindings/dart/keri/keri/example/: pubspec.yaml
bindings/dart/keri/keri/ios/: bridge_generated.h
bindings/dart/keri/keri/lib/: bridge_generated.dart  bridge_generated.freezed.dart  bridge_generated.h  keri.dart
bindings/dart/keri/keri/test/: functions_test.dart  verification_test.dart
bindings/dart/keri/keri/windows/: CMakeLists.txt  keri_plugin_c_api.cpp
bindings/dart/keri/keri_android/: CHANGELOG.md  README.md  pubspec.yaml
bindings/dart/keri/keri_android/android/: build.gradle  settings.gradle
bindings/dart/keri/keri_android/example/: README.md  pubspec.yaml
bindings/dart/keri/keri_android/lib/: bridge_generated.dart  bridge_generated.freezed.dart  bridge_generated.h  keri_android.dart
bindings/dart/keri/keri_ios/: CHANGELOG.md  README.md  pubspec.yaml
bindings/dart/keri/keri_ios/example/: README.md  pubspec.yaml
bindings/dart/keri/keri_ios/ios/: bridge_generated.h  keri_ios.podspec
bindings/dart/keri/keri_ios/lib/: bridge_generated.dart  keri_ios.dart
bindings/dart/keri/keri_macos/: CHANGELOG.md  README.md  pubspec.yaml
bindings/dart/keri/keri_macos/example/: README.md  pubspec.yaml
bindings/dart/keri/keri_macos/lib/: bridge_generated.dart  exceptions.dart  keri_macos.dart
bindings/dart/keri/keri_macos/macos/: keri_macos.podspec
bindings/dart/keri/keri_platform_interface/: CHANGELOG.md  README.md  pubspec.yaml
bindings/dart/keri/keri_platform_interface/lib/: bridge_generated.dart  keri_platform_interface.dart  keri_platform_interface_method_channel.dart
bindings/dart/keri/keri_windows/: .metadata  CHANGELOG.md  README.md  pubspec.yaml
bindings/dart/keri/keri_windows/example/: README.md  pubspec.yaml
bindings/dart/keri/keri_windows/lib/: bridge_generated.dart  bridge_generated.freezed.dart  bridge_generated.h  exceptions.dart  keri_windows.dart
bindings/dart/keri/keri_windows/windows/: CMakeLists.txt  keri_windows_plugin.cpp  keri_windows_plugin.h  keri_windows_plugin_c_api.cpp
bindings/dart/keri/lib/: bridge_generated.dart  bridge_generated.freezed.dart  bridge_generated.h  exceptions.dart  keri.dart
bindings/dart/keri/macos/: keri.podspec
bindings/dart/keri/macos/Classes/: KeriPlugin.swift
bindings/dart/keri/test/: functions_test.dart
bindings/dart/keri/windows/: keri_plugin.cpp  keri_plugin.h
bindings/dart/keri_binds/lib/: bridge_generated.dart  bridge_generated.h  keri.dart
bindings/dart/lib/: exceptions.dart  keri.dart
bindings/dart/macos/: keri.podspec
bindings/dart/macos/Classes/: DartPlugin.swift
bindings/dart/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  identifier.rs  lib.rs  state.rs  test.rs  utils.rs
bindings/dart/tests/: test.rs  test_add_watcher.rs  test_basics.rs  test_kel.rs  test_messagebox.rs  test_multisig.rs  test_oobi.rs  test_tel.rs  test_verification.rs
bindings/node.js/: .gitignore  .npmignore  Cargo.toml  Makefile  README.md  Settings.toml  index.d.ts  index.js  jest.config.js  jest.ts-config.js  package-lock.json  package.json  settings.cfg  test.js  tsconfig.json  tsconfig.test.json
bindings/node.js/.github/workflows/: ci-nodejs.yml
bindings/node.js/client/src/: incept.ts  index.ts  issue.ts  issuing.ts  mechanics.d.ts  mechanics.js  query.ts  rotating.ts  signing.ts
bindings/node.js/client/src/utils/: incept.ts  issue.ts  publish.ts  query.ts
bindings/node.js/db/: db
bindings/node.js/oobi_db/: db  snap.0000000000000312
bindings/node.js/src/: error.rs  identifier.rs  inception_configuration.rs  index.ts  lib.rs
bindings/node.js/src/kel/: error.rs  event_generator.rs  mod.rs
bindings/node.js/src/utils/: configs.rs  error.rs  key_config.rs  mod.rs  rotation_configuration.rs  signature_config.rs  tel_utils.rs
bindings/node.js/test/: anchoring.test.ts  api.test.ts  high.test.ts  high_level_api.test.ts  inception.test.ts  infrastructure.json  issuing.test.ts  key_management_multi.test.ts  key_management_single.test.ts  ledger.test.ts  mechanics.test.ts  rotation.test.ts  signing.test.ts  tsconfig.json  utils.test.ts
bindings/node.js/test/mechanics/: mechanics.test.ts  rotation.test.ts
bindings/node.js/test/support/: b64.ts  inceptor.ts  kel.ts  key_pair.ts  sai.ts  tpm.ts
keriox-wrapper/: Cargo.toml
keriox-wrapper/src/: controller.rs  error.rs  event_generator.rs  identifier_controller.rs  kel.rs  lib.rs  utils.rs
src/: lib.rs
(+77 files in other folders)
