[package]
name = "keriox-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keri = { git = "ssh://github.com/THCLab/keriox-apache.git", features = ["build-binary"]}
base64 = "0.13.0"
thiserror = "1.0.30"
hex = "0.4.3"
anyhow = { version = "1.0.56"}
reqwest = { version = "0.11.10", features = ["json", "rustls-tls", "blocking"], default-features = false }
futures = {version = "0.3.21" }
serde_json = "1.0.81"

[dev-dependencies]
tempfile = "3.1"
