[package]
name = "keri-dart"
version = "0.1.0"
edition = "2021"

[lib]
name = "dartkeriox"
crate-type = ["dylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flutter_rust_bridge = "1"
keri = { path = "../../../keriox/keriox_core" }
controller = { path = "../../../keriox/components/controller" }
anyhow = { version = "1.0" }
thiserror = "1.0"
base64 = "0.13.0"
hex = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.1"