[package]
name = "keri-dart"
version = "0.1.0"
edition = "2021"

[lib]
name = "dartkeriox"
crate-type = ["cdylib", "staticlib"]

[profile.release]
strip = true
opt-level = "z"
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flutter_rust_bridge = "=1.54"
keri = { git = "https://github.com/THCLab/keriox.git", rev = "313894b"}
controller = { git = "https://github.com/THCLab/keriox.git", rev = "313894b"}
anyhow = { version = "1.0" }
thiserror = "1.0"
base64 = "0.13.0"
hex = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
tokio = { version = "1.14.0", features = ["rt", "macros"] }
openssl = { version = "0.10.42", features = ["vendored"] }
openssl-sys = "0.9.78"


[dev-dependencies]
tempfile = "3.1"
