[package]
name = "keri-dart"
version = "0.1.0"
edition = "2021"

[lib]
name = "dartkeriox"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
strip = true
opt-level = "z"
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flutter_rust_bridge = "=1.82.3"
keri = { git = "https://github.com/THCLab/keriox.git", features = ["oobi", "mailbox"]}
controller = { git = "https://github.com/THCLab/keriox.git"}
said = { git = "https://github.com/THCLab/cesrox", tag = "v0.1.4" } 
cesrox = { git = "https://github.com/THCLab/cesrox", features = ["cesr-proof"], tag = "v0.1.4" }
anyhow = { version = "1.0" }
thiserror = "1.0"
base64 = "0.13.0"
hex = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
tokio = { version = "1.14.0", features = ["rt", "macros", "rt-multi-thread"] }
openssl = { version = "0.10", features = ["vendored"] }
sled = "0.34.7"

[dev-dependencies]
tempfile = "3.1"
async-std = { version = "1", features = ["attributes", "tokio1"] }
