[package]
name = "keri-node"
version = "0.1.0"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
keri = { git = "https://github.com/THCLab/keriox.git", features = ["controller"] }
thiserror = "1.0"
base64 = "0.13.0"
napi = { version = "2", features = ["serde-json"]}
napi-derive = "2"
simple_config_parser = "0.1.5"
clap = "3.0.0-beta.4"
tempfile = "3.1"
serde_json = "1.0.81"

[target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc = {version = "0.1"}

[build-dependencies]
napi-build = "1"


[dev-dependencies]
ed25519-compact = "0.1"