[package]
name = "keri-dart"
version = "0.1.0"
edition = "2021"

[lib]
name = "dartkeriox"
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flutter_rust_bridge = "1"
keri = { git = "https://github.com/THCLab/keriox.git", features = ["controller"] }
anyhow = { version = "1.0" }
thiserror = "1.0"
base64 = "0.13.0"
hex = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.1"

[profile.release]
strip = true 
opt-level = "z"
lto = true
codegen-units = 1
